[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/graphic/enemies/enemy_5/enemy_5_1.tres" type="SpriteFrames" id=1]
[ext_resource path="res://assets/graphic/enemies/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/graphic/enemies/enemy_5/enemy_5_2.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/graphic/buildings/health_background.png" type="Texture" id=4]
[ext_resource path="res://assets/objects/health_foreground.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/graphic/enemies/enemyTower.gd" type="Script" id=6]
[ext_resource path="res://assets/sound/shoot.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 19 )

[sub_resource type="CircleShape2D" id=2]
radius = 448.071

[node name="enemy_5" type="PathFollow2D"]
z_index = 20
loop = false
lookahead = 25.0
script = ExtResource( 2 )
defaultSpeed = 70
healthpoints = 4200
scorepoints = 250
showExplosionEffect = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 2049

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = ExtResource( 1 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 4.76837e-07 )
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="KinematicBody2D"]
visible = false
position = Vector2( -30, 0 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="health_background" type="Sprite" parent="KinematicBody2D/Node2D"]
position = Vector2( -0.49905, 3.8768 )
scale = Vector2( 0.67176, 0.248719 )
texture = ExtResource( 4 )

[node name="health_foreground" parent="KinematicBody2D/Node2D" instance=ExtResource( 5 )]
margin_left = -22.0
margin_top = 2.0
margin_right = 42.0
margin_bottom = 17.0
rect_scale = Vector2( 0.672, 0.25 )
value = 100.0

[node name="TankTower" type="Node2D" parent="."]
script = ExtResource( 6 )
projectileDamage = 5.0

[node name="TowerAudio" type="AudioStreamPlayer2D" parent="TankTower"]
stream = ExtResource( 7 )
bus = "Sfx"

[node name="Object" type="Node2D" parent="TankTower"]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="TankTower/Object"]
rotation = -1.5708
frames = ExtResource( 3 )
animation = "walk"
playing = true

[node name="FireRange" type="Area2D" parent="TankTower/Object"]
collision_layer = 0
collision_mask = 1024
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TankTower/Object/FireRange"]
shape = SubResource( 2 )

[connection signal="body_entered" from="TankTower/Object/FireRange" to="TankTower" method="_on_fireRange_body_entered"]
[connection signal="body_exited" from="TankTower/Object/FireRange" to="TankTower" method="_on_fireRange_body_exited"]
